# experiment-utils

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml  python-testing.yml
experiment_utils/: __init__.py  estimators.py  experiment_analyzer.py  power_sim.py  spark_instance.py  utils.py  validate.py
tests/: test_experiment_analyzer.py  test_power_sim.py
tests/.github/workflows/: python-testing.yaml
