[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "experiment-utils"
version = "0.0.1"
description = "Utils for experimental design and analysis"
readme = "README.md"
authors = ["Sebastian Daza <sebastian.daza@gmail.com>"]
license = "MIT"

keywords = [
    "causality",
    "pyspark",
    "causal-inference",
    "statistics",
    "experimentation",
    "power-analysis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.21.5"
pandas = ">=1.4.4"
matplotlib = ">=3.5.2"
seaborn = ">=0.11.2"
multiprocess = ">=0.70.14"
threadpoolctl = ">=3.5.0"
statsmodels = ">=0.13.2"
scipy = ">=1.9.1"
linearmodels = ">=6.1"
scikit-learn = ">=1.6.0"
pytest = ">=8.3.4"
pyspark = ">=3.5.3"
xgboost = ">=2.1.3"